@startuml

title __BOXES's Class Diagram__\n

  namespace Prototype_AbstractFactory {
    namespace Boxes {
      class Prototype_AbstractFactory.Boxes.Box_Type_Calzone {
          + Box_Type_Calzone()
          + Box_Type_Calzone()
          + Clone()
          + FinishBoxing()
      }
    }
  }
  

  namespace Prototype_AbstractFactory {
    namespace Boxes {
      class Prototype_AbstractFactory.Boxes.Box_Type_Family {
          + Box_Type_Family()
          + Box_Type_Family()
          + Clone()
          + FinishBoxing()
      }
    }
  }
  

  namespace Prototype_AbstractFactory {
    namespace Boxes {
      class Prototype_AbstractFactory.Boxes.Box_Type_Italian {
          + Box_Type_Italian()
          + Box_Type_Italian()
          + Clone()
          + FinishBoxing()
      }
    }
  }
  

  namespace Prototype_AbstractFactory {
    namespace Boxes {
      class Prototype_AbstractFactory.Boxes.Box_Type_Large {
          + Box_Type_Large()
          + Box_Type_Large()
          + Clone()
          + FinishBoxing()
      }
    }
  }
  

  namespace Prototype_AbstractFactory {
    namespace Boxes {
      class Prototype_AbstractFactory.Boxes.Box_Type_Medium {
          + Box_Type_Medium()
          + Box_Type_Medium()
          + Clone()
          + FinishBoxing()
      }
    }
  }
  

  Prototype_AbstractFactory.Boxes.Box_Type_Calzone -up-|> Prototype_AbstractFactory.Boxes.Abstracts.Pizza_Box
  Prototype_AbstractFactory.Boxes.Box_Type_Family -up-|> Prototype_AbstractFactory.Boxes.Abstracts.Pizza_Box
  Prototype_AbstractFactory.Boxes.Box_Type_Italian -up-|> Prototype_AbstractFactory.Boxes.Abstracts.Pizza_Box
  Prototype_AbstractFactory.Boxes.Box_Type_Large -up-|> Prototype_AbstractFactory.Boxes.Abstracts.Pizza_Box
  Prototype_AbstractFactory.Boxes.Box_Type_Medium -up-|> Prototype_AbstractFactory.Boxes.Abstracts.Pizza_Box


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
